--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ghpagebuild": "ng build --prod --base-href https://avbillie.github.io/astral-weather/",
+    "ghpagebuild": "ng build --prod --base-href https://Avbillie.github.io/astral-weather/",
     "ghpagedeploy": "npx angular-cli-ghpages --dir=dist/astral-weather"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
     "@angular/common": "~11.0.9",
+    "@angular/cli": "~11.0.7",
+    "@angular/compiler-cli": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
@@ -29,10 +31,12 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "~11.0.7",
-    "@angular/compiler-cli": "~11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
